# WallpaperManager

./: .gitignore  .pnp.cjs  Cargo.toml  README.md  cos_upload.py  neutralino.config.json  package.json
.github/workflows/: build.yml
.tmp/: auth_info.json  window_state.config.json
frontend/: index.html  index_build.html  package.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/@types/: window.d.ts
frontend/src/components/: WallpaperCarousel.vue
frontend/src/router/: index.ts
frontend/src/utils/: config.ts  file-manager.ts  lifecycle.ts  tray.ts
frontend/src/views/: ConfigView.vue  HomeView.vue
resources/: index.html  source-manager.html  styles.css
resources/js/: main.js  main.ts  source-manager.js
resources/scripts/: fedora.sh  windows.bat
scripts/: fedora.sh  windows.bat
source/: 2026年7月新番壁纸.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/wallpaper/: linux.rs  mod.rs  windows.rs
src/components/: WallpaperCarousel.vue
src/router/: index.ts
src/utils/: settings-window.ts  tray.ts  wallpaper-sources.ts  window-settings.ts
src/views/: HomeView.vue  SettingsView.vue
